--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "classname": "^0.0.0",
     "classnames": "^2.5.1",
     "iot-dashboard": "file:",
+    "mqtt": "^5.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
