--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "mqtt": "^5.10.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.2",
-    "server": "file:"
+    "server": "file:",
+    "socket.io": "^4.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
