--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.4",
     "classname": "^0.0.0",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "iot-dashboard": "file:",
     "mqtt": "^5.10.1",
     "react": "^18.3.1",
@@ -21,6 +22,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
